<resources>
    <string name="app_name">Agenda</string>
    <string name="tituloAdd">Contacto</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="addcontact">Añadir</string>
    <string name="agenda">Ver contactos</string>
</resources>
