<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.vcarmen.agenda.AddContact">

    <!-- añadiendo una barra de accion -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nombre"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/apellidos"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="9"
        android:imeOptions="normal"
        android:hint="@string/telefono"/>



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mujer" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/addcontact"
        android:onClick="addContacto"/>
    <Button
        android:id="@+id/buttonAgenda"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/agenda"
        android:onClick="verContactos"/>


</LinearLayout>
